<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            android:background="@drawable/border_edit_text"/>
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColorHint="@color/black"
            android:layout_marginTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/lname"
            android:background="@drawable/border_edit_text"/>
        <EditText
            android:id="@+id/etSpecialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:textColorHint="@color/black"
            android:hint="@string/specialization"
            android:background="@drawable/border_edit_text"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/etCertification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/certification"
            android:textSize="24sp"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:text="@string/add"/>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/next"/>
    </LinearLayout>
</RelativeLayout>